<resources>
    <string name="app_name">KiLin ToDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">添加一个代办事项</string>
    <string name="options">更多选项</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="nodate">未定</string>
    <string name="customdate">自选</string>
    <string name="todowhat">待办事项</string>
    <string name="switch_countimer">启用倒计时</string>
    <string name="save">保存</string>
    <string name="time1">25分钟</string>
    <string name="time2">45分钟</string>
    <string name="customtime">分钟数</string>
    <string name="repeatway">重复</string>
    <string name="norepeat">不重复</string>
    <string name="daily">每天</string>
    <string name="weekly">每周</string>
    <string name="customdays">天数</string>
    <string name="description">添加备注</string>
    <string name="start">开始专注</string>
    <string name="doing">专注中</string>


    <string-array name="english_week_string_array">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string-array name="chinese_week_string_array">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>
    <string name="title_activity_immersion_model">ImmersionModelActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save_time">确认</string>
    <string name="start_text">KiLinToDo (China) Software</string>
    <string name="author">(郑展逸) 1138154255@qq.com</string>
    <string name="account">请输入账号</string>
    <string name="password">请输入密码</string>
    <string name="auto_login">自动登录</string>
    <string name="minutes">分钟</string>
    <string name="create">创建自习室</string>
    <string name="join">加入自习室</string>
    <string name="create_classroom">创建自习室</string>
    <string name="classroomnameedit">自习室名称</string>
    <string name="confirm">确认</string>
    <string name="join_classroom">加入自习室</string>
    <string name="classroomcodeedit">自习室编码</string>
    <string name="select_firstday">选择第一周日期</string>
    <string name="monday_date">周一日期</string>
    <string name="app_description">目前已支持浙江工业大学教务</string>
    <string name="app_feature">教务课表导入</string>
    <string name="setting">设置</string>
    <string name="qq_share">QQ分享</string>
    <string name="wechat_share">微信分享</string>
    <string name="help">帮助中心</string>
    <string name="contact">联系我们</string>
    <string name="about_us">关于</string>
    <string name="logout">退出登录</string>
    <string name="email">请输入邮箱</string>
    <string name="again_password">再次输入密码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="to_register">没有账号？前往注册</string>
</resources>