<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:background="@color/Huawei_White"
    android:orientation="vertical">

    <TextView
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:text="@string/save"
        android:background="@color/white"
        android:textColor="@color/Mask_Green"
        android:textSize="22dp"/>

    <LinearLayout
        android:id="@+id/contextview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/save_button"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/todocontext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:layout_gravity="center_vertical"
            android:hint="@string/todowhat" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dateview"
        android:layout_below="@id/contextview"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/today"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:text="@string/today"
            android:textColor="@color/white"
            android:background="@drawable/button_normal_selected"
            tools:ignore="RtlCompat" />
        <TextView
            android:id="@+id/tomorrow"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:text="@string/tomorrow"
            android:textColor="@color/custom_Gray"
            android:background="@drawable/button_normal_unselect"
            tools:ignore="RtlCompat" />
        <TextView
            android:id="@+id/nodate"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:text="@string/nodate"
            android:textColor="@color/custom_Gray"
            android:background="@drawable/button_normal_unselect"
            tools:ignore="RtlCompat" />
        <TextView
            android:id="@+id/customdate"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/customdate"
            android:textColor="@color/custom_Gray"
            android:background="@drawable/button_normal_unselect"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/timertype_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/dateview"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/switch_countimer"
            android:textAlignment="center"
            android:textColor="@color/custom_black"
            android:textSize="20dp" />

        <Switch
            android:id="@+id/switchbutton_countimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:checked="true"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/timerlength_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/timertype_view"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time1"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="40dp"
            android:layout_weight="1"
            android:background="@drawable/button_normal_selected"
            android:text="@string/time1"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/time2"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="40dp"
            android:layout_weight="1"
            android:background="@drawable/button_normal_unselect"
            android:text="@string/time2"
            android:textColor="@color/custom_Gray"
            android:textAlignment="center"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/time3"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:background="@drawable/button_normal_unselect"
            android:hint="@string/customtime"
            android:textColor="@color/custom_Gray"
            android:inputType="number"
            android:textSize="16dp"
            android:saveEnabled="false"
            android:textAlignment="center"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/repeatedview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/timerlength_view">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/repeatway"
            android:textAlignment="center"
            android:textColor="@color/custom_black"
            android:textSize="20dp" />

        <LinearLayout
            android:id="@+id/repeat_buttongroup"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/norepeat"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_normal_selected"
                android:text="@string/norepeat"
                android:textAlignment="center"
                android:textColor="@color/white"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/daily"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_normal_unselect"
                android:text="@string/daily"
                android:textColor="@color/custom_Gray"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/weekly"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_normal_unselect"
                android:text="@string/weekly"
                android:textColor="@color/custom_Gray"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/customerday"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_normal_unselect"
                android:hint="@string/customdays"
                android:inputType="date"
                android:textColor="@color/custom_Gray"
                android:textAlignment="center"
                android:textSize="16dp"
                tools:ignore="RtlCompat" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/repeatedview">

        <ImageButton
            android:id="@+id/clockset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:src="@drawable/ic_clock2" />

        <TextView
            android:id="@+id/clocktext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:visibility="gone"
            android:layout_toEndOf="@+id/clockset"
            android:layout_marginStart="20dp"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool_bar"
        android:inputType="textMultiLine"
        android:hint="@string/description"
        />

</RelativeLayout>