<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Mask_Green">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_classroom"
            android:textColor="@color/Huawei_White"
            android:textSize="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Huawei_Gray"
        android:layout_below="@id/titleBar">

        <EditText
            android:id="@+id/classroom_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:ems="16"
            android:gravity="center"
            android:hint="@string/classroomcodeedit"
            android:singleLine="true" />

        <Button
            android:id="@+id/classroom_create_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/classroom_name_edit"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_confirm"
            android:text="@string/confirm"
            android:textColor="@color/Huawei_White"/>

    </RelativeLayout>

</RelativeLayout>