<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Huawei_White"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:id="@+id/logo_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:src="@drawable/logo_green"/>

        <TextView
            android:id="@+id/logo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/logo_image"
            android:layout_centerVertical="true"
            android:textSize="30dp"
            android:textColor="@color/Mask_Green2"
            android:text="@string/app_name"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/account_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo_layout"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/account_edit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/editborder"
            android:ems="14"
            android:gravity="center"
            android:hint="@string/email"
            android:singleLine="true" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/password_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/account_layout"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/editborder"
            android:ems="14"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/again_password_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password_layout"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/again_password_edit"
            android:inputType="textPassword"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:ems="14"
            android:gravity="center"
            android:hint="@string/again_password"
            android:singleLine="true"
            android:background="@drawable/editborder"
            />
    </RelativeLayout>

<!--    验证码-->
    <RelativeLayout
        android:id="@+id/verification_code_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/again_password_layout"
        android:background="@drawable/editborder"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/verification_code_edit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/editborder"
            android:ems="14"
            android:gravity="center"
            android:inputType="number"
            android:singleLine="true" />

        <Button
            android:id="@+id/verification_code_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_toEndOf="@id/verification_code_edit"
            android:background="@drawable/btn_get_verification_code"
            android:textColor="@color/Huawei_White"
            android:text="@string/get_verification_code" />

    </RelativeLayout>


    <Button
        android:id="@+id/login_button"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_below="@id/verification_code_layout"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circlebtn"
        android:text="→"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:textStyle="bold" />




</RelativeLayout>